samples/_failures_safe/1761618725_0a7ac7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c0be274.c: In function ‘print_token’:
./samples/SAFE/__tmp_0c0be274.c:169:9: error: expected declaration or statement at end of input
  169 |         printf(" [%s]", token->value);
      |         ^~~~~~
./samples/SAFE/__tmp_0c0be274.c:169:9: error: expected declaration or statement at end of input
